// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disconnection should disconnect if connected to channel 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/disconnect",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "disconnected",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Bye!\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "C",
    },
  },
]
`;

exports[`disconnection should disconnect, reconnect and disconnect again without any problem 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/disconnect",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "disconnected",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Bye!\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 7,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`misc commands invalid command should call help 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "invalidCommand": "/invalid command",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "help": true,
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "C",
    },
  },
]
`;

exports[`player creation should create player if not previously created 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`player creation should not create player if previously created 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`playlist should print queue 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"Queue\\",
          \\"type\\": \\"rich\\",
          \\"description\\": \\"\`0)\` /play test ← Currently playing\\",
          \\"url\\": null,
          \\"timestamp\\": \\"2000-02-01T00:00:00.000Z\\",
          \\"color\\": 16758815,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`playlist should print queue with multiple tracks 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"Queue\\",
          \\"type\\": \\"rich\\",
          \\"description\\": \\"\`0)\` /play test ← Currently playing\\\\n\`1)\` /play test2\\",
          \\"url\\": null,
          \\"timestamp\\": \\"2000-02-01T00:00:00.000Z\\",
          \\"color\\": 16758815,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;

exports[`playlist should print queue with no tracks 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/queue",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": \\"The queue is empty 👀\\",
          \\"type\\": \\"rich\\",
          \\"description\\": null,
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
]
`;

exports[`playlist should queue song if another one is already playing 1`] = `
Array [
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "created",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 0,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 1,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "commandCalled": "/play",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "playlist": "found",
      },
    },
  },
  TestMessageValue {
    "frame": 2,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"{\\\\\\"name\\\\\\":\\\\\\"/play test3\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test3\\\\\\",\\\\\\"removed\\\\\\":false} has been added to the queue\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 5,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test2\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test2\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
  TestMessageValue {
    "frame": 10,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "messageSent": "{
          \\"title\\": null,
          \\"type\\": \\"rich\\",
          \\"description\\": \\"Now playing: {\\\\\\"name\\\\\\":\\\\\\"/play test3\\\\\\",\\\\\\"link\\\\\\":\\\\\\"test3\\\\\\",\\\\\\"removed\\\\\\":false}\\",
          \\"url\\": null,
          \\"timestamp\\": null,
          \\"color\\": null,
          \\"fields\\": [],
          \\"thumbnail\\": null,
          \\"image\\": null,
          \\"author\\": null,
          \\"footer\\": null
}",
      },
    },
  },
  TestMessageValue {
    "frame": 15,
    "notification": Object {
      "kind": "N",
      "value": Object {
        "player": "idle",
      },
    },
  },
]
`;
